syntax = "proto3";
package com.exam.product.api;
import "resources.proto";

service ProductService {
  rpc getProduct(HelloRequest) returns (HelloResponse);
}
